--- a/composer.json
+++ b/composer.json
@@ -5,20 +5,17 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "guzzlehttp/guzzle": "^7.2",
         "jeroen-g/explorer": "^3.12",
-        "laravel/framework": "^10.47",
+        "laravel/framework": "^11.0",
         "laravel/octane": "^2.3",
         "laravel/pulse": "*",
-        "laravel/sanctum": "^3.3",
+        "laravel/sanctum": "^4.0",
         "laravel/scout": "^10.8",
-        "laravel/telescope": "^4.17",
+        "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-permission": "^6.3",
-        "spiral/roadrunner": "^2023.3",
-        "spiral/roadrunner-cli": "^2.6",
-        "spiral/roadrunner-http": "^3.4"
+        "spatie/laravel-permission": "^6.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -27,7 +24,7 @@
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
+        "nunomaduro/collision": "^8.1",
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0"
     },
