--- a/_docker/app/php.ini
+++ b/_docker/app/php.ini
@@ -2,4 +2,6 @@ cgi.fix_pathinfo=0
 max_execution_time = 1000
 max_input_time = 1000
 memory_limit=4G
-client_max_body_size=10M
+upload_max_filesize=10M
+post_max_size=10M
+
