--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.8",
         "nativephp/electron": "^0.5.0",
-        "spatie/laravel-permission": "^6.3"
+        "spatie/laravel-permission": "^6.3",
+        "tucker-eric/eloquentfilter": "^3.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
