--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-    server_develop:
+    server:
         image: "nginx:stable-alpine"
         volumes:
             - ./:/var/www
@@ -8,18 +8,18 @@ services:
         ports:
             - "2200:80"
         depends_on:
-            - app_develop
-        container_name: server_develop
-    app_develop:
+            - app
+        container_name: server
+    app:
         build:
             context: .
             dockerfile: _docker/app/Dockerfile
         volumes:
             - ./:/var/www
         depends_on:
-            -   database_develop
-        container_name: app_develop
-    database_develop:
+            -   database
+        container_name: app
+    database:
         image: mysql:8.0
         restart: always
         volumes:
@@ -30,5 +30,5 @@ services:
         ports:
             -   8102:3306
         command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
-        container_name: database_develop
+        container_name: database
 
