--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         ports:
             - "2200:80"
         depends_on:
-            - app
+            - app_rustam
         container_name: server_rustam
     app_rustam:
         build:
