--- a/composer.json
+++ b/composer.json
@@ -6,19 +6,20 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-calendar": "*",
+        "google/apiclient": "^2.16",
         "guzzlehttp/guzzle": "^7.2",
         "jeroen-g/explorer": "^3.12",
-        "laravel/framework": "^11.0",
+        "laravel/framework": "^v10.48.10",
         "laravel/octane": "^2.3",
         "laravel/pulse": "*",
-        "laravel/sanctum": "^4.0",
+        "laravel/sanctum": "^3.3.3",
         "laravel/scout": "^10.8",
         "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.8",
         "nativephp/electron": "^0.5.0",
         "spatie/laravel-permission": "^6.3",
-        "tucker-eric/eloquentfilter": "^3.3",
-      "ext-calendar": "*"
+        "tucker-eric/eloquentfilter": "^3.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -27,7 +28,7 @@
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^8.1",
+        "nunomaduro/collision": "^7.10.0",
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0"
     },
