--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,12 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
+        "php": "^8.1.6",
         "ext-calendar": "*",
         "google/apiclient": "^2.16",
         "guzzlehttp/guzzle": "^7.2",
         "jeroen-g/explorer": "^3.12",
+        "laravel-notification-channels/telegram": "^5.0",
         "laravel/framework": "^v10.48.10",
         "laravel/octane": "^2.3",
         "laravel/pulse": "*",
