--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/scout": "^10.8",
         "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.1",
         "nativephp/electron": "^0.5.0",
         "spatie/laravel-permission": "^6.3",
         "tucker-eric/eloquentfilter": "^3.3"
