--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1.6",
         "ext-calendar": "*",
+        "box/spout": "^3.3",
         "google/apiclient": "^2.16",
         "guzzlehttp/guzzle": "^7.2",
         "jeroen-g/explorer": "^3.12",
