--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
+        "matanyadaev/laravel-eloquent-spatial": "^4.2",
         "nativephp/electron": "^0.5.0",
         "spatie/laravel-permission": "^6.3",
         "tucker-eric/eloquentfilter": "^3.3"
