--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "google/apiclient": "^2.16",
         "guzzlehttp/guzzle": "^7.2",
         "jeroen-g/explorer": "^3.12",
+        "laravel-notification-channels/fcm": "^3.2",
         "laravel-notification-channels/telegram": "^5.0",
         "laravel/framework": "^v10.48.10",
         "laravel/octane": "^2.3",
