--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,9 @@ print_first:
   only:
     - develop
   script:
-    - echo "hello world"
+    - echo $CI_COMMIT_SHA
+    - echo $CI_COMMIT_TITLE
+    - echo $CI_COMMIT_TAG
 
 print_second:
   stage: second
@@ -19,7 +21,8 @@ print_second:
   only:
     - develop
   script:
-    - echo "hello world second"
+    - echo $CI_REGISTRY_USER
+    - echo $CI_REGISTRY
 
 print_third:
   stage: third
