--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,26 +1,22 @@
 stages:
-  - first
-  - second
-  - third
+  - build
 
-print_first:
-  stage: first
+variables:
+  REGISTRY: "registry.gitlab.com/ftursunboy/finsoft"
+
+before_script:
+  - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+
+
+app_build:
+  stage: build
   tags:
     - build
   only:
     - develop
   script:
-    - export RUSTAM="blabla"
-    - echo RUSTAM
-    - echo $APP_NAME
-    - echo $APP_ENV
-    - echo $APP_KEY
-    - echo $APP_DEBUG
-    - echo $APP_URL
-    - echo $DB_CONNECTION
-    - echo $DB_HOST
-    - echo $DB_PORT
-    - echo $DB_DATABASE
-    - echo $DB_USERNAME
-    - echo $DB_PASSWORD
+    - docker build --build-arg NODE_ENV="dev" -t "$REGISTRY/dev/app:$CI_COMMIT_SHA" -f ./_docker/gitlab/app/Dockerfile .
+    - docker push "$REGISTRY/dev/app:$CI_COMMIT_SHA"
+
+
 
